--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ install:
 # Run script
 script:
   #- phpunit
-  - ./vendor/bin/php-cs-fixer fix
+  #- ./vendor/bin/php-cs-fixer fix
 
 # After a build, send email notification with the build results
 notifications:
