--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,12 @@
     }
   ],
   "require": {
-    "php": ">=7.1.0",
-    "gedmo/doctrine-extensions": "^2.4"
+    "php": "^7.4",
+    "gedmo/doctrine-extensions": "^3.0"
   },
   "require-dev": {
-    "doctrine/doctrine-bundle": "^1.3",
     "friendsofphp/php-cs-fixer": "^1.11",
-    "swiftmailer/swiftmailer": "^5.0",
     "symfony/phpunit-bridge": "^3.0",
-    "symfony/validator": "^3.0",
-    "symfony/yaml": "^3.0",
     "phpunit/phpunit": "~5.0"
   },
   "autoload": {
@@ -38,7 +34,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0-dev"
+      "dev-master": "0.2-dev"
     }
   }
 }
