Fix issue due to migration

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,7 +1,10 @@
 services:
 
+    Dywee\CoreBundle\Controller\AdminController:
+        arguments:
+            - '@event_dispatcher'
+
     Dywee\CoreBundle\Controller\MemberController:
-        public: true
         arguments:
             - '@event_dispatcher'
 
